src/objects/Deposition_Group_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>IF(Contact__r.AccountId != NULL ,HYPERLINK(&apos;/&apos;+Contact__r.AccountId,Contact__r.Account.Name),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deposition Group</relationshipLabel>
        <relationshipName>Deposition_Group_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deposition Group</label>
        <referenceTo>Case__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Deposition_Group_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Claims Manager</fullName>
                </value>
                <value>
                    <fullName>Corporate Client</fullName>
                </value>
                <value>
                    <fullName>Court Reporter</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Scheduler</fullName>
                </value>
                <value>
                    <fullName>Videographer/Technician</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deposition Group Contact</label>
    <nameField>
        <displayFormat>DGC-{00000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposition Group Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>